--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,5 +25,8 @@ jobs:
     - name: Build
       run: go build -v ./...
 
+    - name: Lint
+      run: golangci-lint run
+
     - name: Test
       run: go test -v ./... 
